Apache Tez Change Log
=====================


Release 0.7.0: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2176. Move all logging to slf4j. (commons-logging jar no longer part of Tez tar)
  TEZ-1993. Implement a pluggable InputSizeEstimator for grouping fairly

ALL CHANGES:
  TEZ-2292. Add e2e test for error reporting when vertex manager invokes
  plugin APIs
  TEZ-2308. Add set/get of record counts in task/vertex statistics
  TEZ-2344. Tez UI: Equip basic-ember-table's cell level loading for all use cases in all DAGs table
  TEZ-2313. Regression in handling obsolete events in ShuffleScheduler.
  TEZ-2212. Notify components on DAG completion.
  TEZ-2328. Add tez.runtime.sorter.class & rename tez.runtime.sort.threads
  to tez.runtime.pipelined.sorter.sort.threads.
  TEZ-2333. Enable local fetch optimization by default.
  TEZ-2310. Deadlock caused by StateChangeNotifier sending notifications on
  thread holding locks
  TEZ-1969. Stop the DAGAppMaster when a local mode client is stopped
  TEZ-714. OutputCommitters should not run in the main AM dispatcher thread
  TEZ-2323. Fix TestOrderedWordcount to use MR memory configs.
  TEZ-1482. Fix memory issues for Local Mode running concurrent tasks
  TEZ-2033. Update TestOrderedWordCount to add processor configs as history text
  and use MR configs correctly
  TEZ-2318. Tez UI: source and sink page is broken as they are not populated.
  TEZ-2016. Tez UI: Dag View Fit and Finish
  TEZ-2252. Tez UI: in graphical view some of the sinks are hidden as they overlap
  TEZ-2275. Tez UI: enable faster loading and caching of data in tables
  TEZ-2234. Add API for statistics information - allow vertex managers to get
  output size per source vertex
  TEZ-2274. Tez UI: full data loading, client side search and sort for other pages
  TEZ-2301. Switch Tez Pre-commit builds to use tezqa user.
  TEZ-2299. Invalid dag creation in MRRSleepJob post TEZ-2293.
  TEZ-2290. Scale memory for Default Sorter down to a max of 2047 MB if configured higher.