@@ -101,6 +101,10 @@ public interface Vertex extends Comparable<Vertex> {
   public void reconfigureVertex(int parallelism,
       @Nullable VertexLocationHint locationHint,
       @Nullable Map<String, EdgeProperty> sourceEdgeProperties) throws AMUserCodeException;
+  
+  public void reconfigureVertex(@Nullable Map<String, InputSpecUpdate> rootInputSpecUpdate,
+      int parallelism,
+      @Nullable VertexLocationHint locationHint) throws AMUserCodeException;
 
   void setVertexLocationHint(VertexLocationHint vertexLocationHint);
   void vertexReconfigurationPlanned();
